GRIFFON-445 fix min/max permgem flags in run-app